k8s/cms-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cms-app-depl
  namespace: cvm-prod
spec: 
  replicas: 1 
  selector: 
    matchLabels:
        component: cms-app 
  template: 
    metadata:
      labels: 
        component: cms-app
    spec:
      containers: 
      - name: dbss-api 
        image: dmp-api-k8s-registry.com:443/dte-cms-app:V0.0.1 #abdm6464/dte-dnbo:V0.0.8
        imagePullPolicy: IfNotPresent
