k8s/eligible-app-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eligible-app-depl
  namespace: cvm-prod
spec: 
  replicas: 1 
  selector: 
    matchLabels:
        component: eligible-app
  template: 
    metadata:
      labels: 
        component: eligible-app
    spec:
      containers: 
      - name: eligible-app 
        image: dmp-api-k8s-registry.com:443/dte-eligible-app:V0.0.1 #abdm6464/dte-dnbo:V0.0.8
        imagePullPolicy: IfNotPresent
