k8s/dbss-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dbss-depl
  namespace: cvm-prod
spec: 
  replicas: 1 
  selector: 
    matchLabels:
        component: dbss-api
  template: 
    metadata:
      labels: 
        component: dbss-api
    spec:
      containers: 
      - name: dbss-api 
        image: dmp-api-k8s-registry.com:443/dte-dbss-api:V0.0.1 #abdm6464/dte-dnbo:V0.0.8
        imagePullPolicy: IfNotPresent 
        ports: 
        - containerPort: 3000 
        # env:  
        #   - name: DBSS_API
        #     value: http://dbss-svc:3000
        #   - name: REDIS_HOST
        #     value: redis://redis-event-bus:6379
---

apiVersion: v1
kind: Service
metadata: 
    name: dbss-api-svc
    namespace: cvm-prod
spec: 
  type: ClusterIP
  ports: 
    - port: 3000 
      targetPort: 3000 
  selector: 
    component: dbss-api
