k8s/eligible-api-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eligible-api-depl
  namespace: cvm-prod
spec: 
  replicas: 1 
  selector: 
    matchLabels:
        component: eligible-api
  template: 
    metadata:
      labels: 
        component: eligible-api 
    spec:
      containers: 
      - name: eligible-api 
        image: dmp-api-k8s-registry.com:443/dte-eligible-api:0.0.3 #abdm6464/dte-dnbo:V0.0.8
        imagePullPolicy: IfNotPresent 
        ports: 
        - containerPort: 3001 
---

apiVersion: v1
kind: Service
metadata: 
    name: eligible-api-svc
    namespace: cvm-prod
spec: 
  type: ClusterIP
  ports: 
    - port: 3001 
      targetPort: 3001 
  selector: 
    component: eligible-api
