k8s/getway-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: getway-api-depl
  namespace: cvm-prod
spec: 
  replicas: 1 
  selector: 
    matchLabels:
        component: getway-api
  template: 
    metadata:
      labels: 
        component: getway-api 
    spec:
      containers: 
      - name: getway-api 
        image: abdm6464/getway-api:v0.0.2 #abdm6464/dte-dnbo:V0.0.8
        imagePullPolicy: IfNotPresent 
        ports: 
        - containerPort: 3000 
---

apiVersion: v1
kind: Service
metadata: 
    name: getway-api-svc
    namespace: cvm-prod
spec: 
  type: ClusterIP
  ports: 
    - port: 3000 
      targetPort: 3000 
  selector: 
    component: getway-api
