k8s/nats-dep.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-depl
  namespace:  cvm-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      component: nats-event-bus
  template:
    metadata:
      labels:
        component: nats-event-bus
    spec:
      containers:
        - name: nats-event-bus
          image: nats
---
apiVersion: v1
kind: Service
metadata:
  name: nats-event-bus-svc
  namespace:  cvm-prod
spec:
  selector:
    component: rnats-event-bus
  ports:
    - name: nats-port
      protocol: TCP
      port: 4222
      targetPort: 4222
