k8s/ingress-svc.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: campaign-api-ingress-svc
  namespace: cvm-prod
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec: 
  rules:
    - http:
        paths:
          - path: /dte-campaign/api/v1/campaign/eligible/?(.*)
            backend:
              serviceName: eligible-api-svc
              servicePort: 3001
          - path: /dte-cms/api/v1/campaign/?(.*)
            backend:
              serviceName: getway-api-svc
              servicePort: 3000
